minor style fix

--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -344,6 +344,7 @@ div[class^=page-] .comment-item:nth-child(even) {
 
 input[type="range"] {
 	-webkit-appearance: none;
+	border-color: #eee;
 	background-color: #eee;
 	height: 16px;
 }
@@ -356,7 +357,7 @@ input[type="range"]::-webkit-slider-thumb {
 	border-radius: 16px;
 	border: 2px solid #eee;
 	cursor: pointer;
-	box-shadow: 0 0 2px inset black;
+	box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.075);
 }
 
 input[type="range"]::-webkit-slider-thumb:hover {
