--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -24,11 +24,11 @@ textarea {
 
 #wrapper {
 	padding: 0;
-	margin: 1em 0 0 0;
 }
 
 #content {
-	background-color: #f6f6ef;
+	/*background-color: #f6f6ef;*/
+	background-color: #f5f5f5;
 	min-height: 1024px;
 	padding-bottom: 100%;
 	overflow: auto; /* inner div is float */
@@ -100,6 +100,8 @@ textarea {
 	background-color: #f5f5f5;
 	/*background-color: #f6f6b6;*/
 	/*background-color: #e9b96e;*/
+	margin: 0;
+	border-bottom: 1px solid #eee;
 }
 
 #nav .btn {
@@ -131,6 +133,11 @@ textarea {
 	margin: 0;
 	padding: 0;
 	width: 100%;
+}
+
+#footer {
+	background-color: #f5f5f5;
+	overflow: auto;
 }
 
 /* -------------------------- *
@@ -168,7 +175,26 @@ textarea {
 	position: relative;
 	text-align: left;
 	width: 100%;
-	margin-bottom: 1em;
+	padding: 1em;
+	display: table;
+}
+
+.item:last-child {
+	border: 1px solid #cccccc;
+}
+
+.item-cell {
+	display: table-cell;
+}
+
+.item-main {
+	padding-right: 1em;
+}
+
+.item-stats {
+	width: 1px;
+	white-space: nowrap;
+	vertical-align: middle;
 }
 
 .item-heading {
@@ -372,3 +398,20 @@ select {
 	cursor: pointer;
 }
 
+.comments-count {
+	float: right;
+	background-color: #aaa;
+	color: white;
+	padding: .1em .5em;
+	border-radius: 1.5em;
+	min-width: 3em;
+	display: inline-block;
+	text-align: center;
+}
+
+.well-tiny {
+	padding: 4px;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+}
