--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -59,9 +59,11 @@ textarea {
 	border-left: 1px solid #eee;
 }
 
+/*
 #item .item {
 	background-color: #eee;
 }
+*/
 
 #items::-webkit-scrollbar,
 #item::-webkit-scrollbar {
@@ -180,12 +182,15 @@ textarea {
 	position: relative;
 	text-align: left;
 	width: 100%;
-	padding: .5em;
+	padding: .5em 0;
 }
 
+/* bad on ios
 .item:hover {
 	background-color: #eee;
+	box-shadow: inset 1px 1px 1px #ddd;
 }
+*/
 
 /*
 .item:last-child {
@@ -252,9 +257,9 @@ textarea {
 .comment-item {
 	background-color: #f5f5f5; /*#f6f6ef;*/
 	border-radius: 2px;
-	margin-bottom: .5em;
+	margin-bottom: 1em;
 	overflow: auto;
-	padding: .5em;
+	padding: 0;
 }
 
 div[class^=page-] {
@@ -291,6 +296,9 @@ div[class^=page-] .comment-item:nth-child(even) {
 .comment-meta {
 	margin-bottom: .2em;
 	color: #888;
+	background-color: #ddd;
+	padding: .2em .5em .2em .5em;
+	border-radius: 4px;
 }
 
 .comment-meta .author a {
@@ -356,11 +364,13 @@ div[class^=page-] .comment-item:nth-child(even) {
 .item.outline.expanding,
 .item.outline-stacked.expanding {
 	background-color: #ddd; /*#f6f6b6;*/
+	box-shadow: inset 1px 1px 1px #ccc;
 }
 
 .item-comments {
 	margin-top: 1em;
 	display: none;
+	padding-bottom: 2em;
 }
 
 #item .item-comments {
