--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -19,7 +19,7 @@ input,
 button,
 select,
 textarea {
-	font-family: "Trebuchet MS", "Helvetica Neue", Helvetica, Arial, STHeiti, "Microsoft YaHei", "Droid Sans Fallback", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", sans-serif;
+	font-family: "Verdana", "_ignore_Trebuchet MS", "Helvetica Neue", Helvetica, Arial, STHeiti, "Microsoft YaHei", "Droid Sans Fallback", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", sans-serif;
 }
 
 #wrapper {
@@ -28,14 +28,20 @@ textarea {
 
 #content {
 	/*background-color: #f6f6ef;*/
-	background-color: #f5f5f5;
+	_background-color: #f5f5f5;
 	min-height: 1024px;
 	padding-bottom: 100%;
 	overflow: auto; /* inner div is float */
+	margin-top: 1em;
 }
 
 #latest {
-	border-bottom: 1px solid #eee;
+	_border-bottom: 1px solid #eee;
+}
+
+#latest ~ .btn-toolbar {
+	padding-left: .5em;
+	padding-right: .5em;
 }
 
 #read,
@@ -56,7 +62,7 @@ textarea {
 }
 
 #item {
-	border-left: 1px solid #eee;
+	_border-left: 1px solid #eee;
 }
 
 /*
@@ -103,11 +109,11 @@ textarea {
 
 #nav {
 	padding: .5em;
-	background-color: #f5f5f5;
+	_background-color: #f5f5f5;
 	/*background-color: #f6f6b6;*/
 	/*background-color: #e9b96e;*/
 	margin: 0;
-	border-bottom: 1px solid #eee;
+	_border-bottom: 1px solid #eee;
 	margin-top: 1em;
 }
 
@@ -117,13 +123,13 @@ textarea {
 
 #prefs {
 	display: none;
-	margin: 1em 0;
+	margin-top: 1em;
 	padding: .5em;
 }
 
-#item,
-#items {
-	padding: .5em;
+#item .item {
+	margin-left: .5em;
+	border-left: 1px solid #eee;
 }
 
 .width-tb-margin {
@@ -177,12 +183,16 @@ textarea {
  * ITEM
  * -------------------------- */
 .item {
-	border-bottom: 1px solid #eee;
+	border-top: 1px solid #eee;
 	border-radius: 2px;
 	position: relative;
 	text-align: left;
-	width: 100%;
-	padding: .5em 0;
+	_width: 100%;
+	padding: .5em;
+}
+
+.item:first-child {
+	border-top-width: 0;
 }
 
 /* bad on ios
@@ -208,7 +218,7 @@ textarea {
 }
 
 .item-main {
-	padding-right: 1em;
+	padding-right: .5em;
 }
 
 .item-stats {
@@ -242,6 +252,10 @@ textarea {
 	text-decoration: underline;
 }
 
+.item-meta {
+	margin-top: .4em;
+}
+
 .item-meta,
 .item-meta a {
 	color: #888;
@@ -255,7 +269,7 @@ textarea {
  * COMMENTS
  * -------------------------- */
 .comment-item {
-	background-color: #f5f5f5; /*#f6f6ef;*/
+	_background-color: #f5f5f5; /*#f6f6ef;*/
 	border-radius: 2px;
 	margin-bottom: 1em;
 	overflow: auto;
@@ -294,10 +308,9 @@ div[class^=page-] .comment-item:nth-child(even) {
 }
 
 .comment-meta {
-	margin-bottom: .2em;
 	color: #888;
 	background-color: #ddd;
-	padding: .2em .5em .2em .5em;
+	padding: .4em .5em .4em .5em;
 	border-radius: 4px;
 }
 
@@ -311,6 +324,7 @@ div[class^=page-] .comment-item:nth-child(even) {
 }
 
 .comment-content {
+	margin-top: .5em;
 	color: black;
 	font-size: 1em;
 	line-height: 1.7em; /* improve line-height since we use MSYH, discussions: http://www.v2ex.com/t/33832 */
@@ -357,6 +371,18 @@ div[class^=page-] .comment-item:nth-child(even) {
 
 .btn-load-page {
 	width: 100%;
+	margin-bottom: .5em;
+}
+
+.end-of-item {
+	margin-top: 1em;
+	text-align: center;
+	font-size: 3em;
+	color: #ccc;
+}
+
+.end-of-item a {
+	text-decoration: none;
 }
 
 .item.outline.expanded,
@@ -444,11 +470,19 @@ select {
 	float: right;
 	background-color: #aaa;
 	color: white;
-	padding: .1em .5em;
+	padding: .4em 1em;
 	border-radius: 1.5em;
 	min-width: 3em;
 	display: inline-block;
 	text-align: center;
+}
+
+.comments-count:hover {
+	background-color: #999;
+}
+
+.comments-count:active {
+	background-color: #888;
 }
 
 .well-tiny {
