--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -389,6 +389,11 @@ div[class^=page-] .comment-item:nth-child(even) {
 	text-decoration: none;
 	font-size: 3em;
 	line-height: 1.2;
+	color: #888;
+	/* override bootstrap, no need for that */
+	box-shadow: none;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
 }
 
 .item.outline.expanded,
