--- a/assets/css/subv.css
+++ b/assets/css/subv.css
@@ -13,6 +13,11 @@ body {
 	padding: 0; /* override bs */
 }
 
+.btn i[class^="icon-"] {
+	/* match up with bootstrap's .btn line-height */
+	line-height: 18px;
+}
+
 *,
 p,
 input,
